fix jumpmenu

--- a/skin/adv_like/adv_like.css
+++ b/skin/adv_like/adv_like.css
@@ -247,7 +247,7 @@ h3 + div.jumpmenu,
 h4 + div.jumpmenu,
 h5 + div.jumpmenu,
 h6 + div.jumpmenu,
-topicpath + div.jumpmenu {
+div#topicpath + div.jumpmenu {
 	display: none;
 }
 
